--- a/css/index.css
+++ b/css/index.css
@@ -6,8 +6,12 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+#titulo{
+    margin: 30px;
+}
+
 body{
-    background-color:rgb(80, 184, 80);
+    background-color:rgb(208, 235, 161);
 }
 
 .drag{
@@ -20,20 +24,26 @@ body{
 .elemento {
     width: 100px;
     height: 50px;
-    background-color: #3498db;
-    color: #fff;
+    background-color: #47aff5;
+    color: #000000;
     margin: 10px auto;
     padding: 10px;
     cursor: pointer;
 }
 
 #zonaDrop {
-    width: 300px;
-    height: 200px;
-    background-color: #e74c3c;
+    width: 120px;
+    height: 70px;
+    background-color: hsl(219, 70%, 42%);
     color: #fff;
     margin: 10px auto;
     padding: 20px;
+    border: 1px solid black;
+}
+
+#ayuda{
+    margin: 10px auto;
+    display: none;
 }
 
 #temporizador {
@@ -41,4 +51,9 @@ body{
     font-weight: 500;
     text-align: center;
     margin: 30px;
+}
+
+#resultado{
+    font-size: 20px;
+    margin: 20px;
 }
